# goodoldsnake

./: .gitignore  CMakeLists.txt  README.md
cmake/: CPM.cmake
src/: controller.cpp  controller.h  food.cpp  food.h  game.cpp  game.h  main.cpp  renderer.cpp  renderer.h  score.cpp  score.h  snake.cpp  snake.h
